@@ -1,6 +1,10 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.129 2004/12/17 21:18:06 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.130 2004/12/18 04:47:14 zhen Exp $
+
+  17 Dec 2004; John Davis <zhen@gentoo.org> modules/catalyst_support.py:
+  fix for #66592. catalyst now gives a traceback when it bails out, making
+  troubleshooting amazingly easier
 
   17 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
   modules/catalyst_support.py, modules/embedded_target.py,
